# microscope-toolset

./: .gitignore  LICENSE  README.md  Roadmap.md  acquire_data.ipynb  basic_agent.ipynb  database_creation.ipynb  publications.txt  pyproject.toml  python_code_settings.py  requirements.txt
chroma_storage/787b4fbf-851d-4eb2-b023-8ced619aa1f1/: index_metadata.pickle
chroma_storage/8efd86b4-ee4a-4d88-a071-d5456a7a2d07/: index_metadata.pickle
publications/: publication_1.txt  publication_10.txt  publication_11.txt  publication_12.txt  publication_13.txt  publication_14.txt  publication_15.txt  publication_16.txt  publication_17.txt  publication_18.txt  publication_19.txt  publication_2.txt  publication_20.txt  publication_21.txt  publication_22.txt  publication_23.txt  publication_24.txt  publication_25.txt  publication_26.txt  publication_27.txt  publication_28.txt  publication_29.txt  publication_3.txt  publication_30.txt  publication_31.txt  publication_32.txt  publication_33.txt  publication_34.txt  publication_35.txt  publication_36.txt  publication_37.txt  publication_38.txt  publication_39.txt  publication_4.txt  publication_40.txt  publication_41.txt  publication_42.txt  publication_43.txt  publication_44.txt  publication_45.txt  (+13 more)
src/: __init__.py  create_database.py  create_database_from_publication.py  easyServer.py  main_file.py  mcp_server_gui.py  mcp_tool_new_version.py  mcp_tool_test.py  microscope-toolset.py  napari.yaml  napari_microscope_toolset.py  plugin_napari.py  start_elastic_search.py  test.py  toolset_server.py  virtual_microscope_napari.py
(+123 files in other folders)
