[project]
name = "microscope-toolset"
version = "0.1.0"
description = "Microscope Toolset for napari"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Dario Bassi", email = "your@email.com" }]
dependencies = [
    "napari-plugin-engine",
    "pymmcore-plus"
    # add other dependencies here
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src/microscope_toolset"]

[project.entry-points."napari.manifest"]
"microscope-toolset" = "microscope_toolset:napari.yaml"